hphp/hack/test/typecheck/namespace_fallback2.php.exp
File "namespace_fallback2.php", line 6, characters 20-26:
Unbound name: :my-xhp (an object type) (Naming[2049])
