hphp/hack/test/typecheck/namespace_fallback2.php
<?hh // strict

namespace Foo {
  class :my-xhp {}

  function test(): :my-xhp {
    return <my-xhp />;
  }
}
